Cooperative tmh chapter revised.

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -4,7 +4,7 @@
 
 Marginally hydrophobic transmembrane helices perform a variety of essential for life intra-membrane molecular biochemistry.
 However, due to their relatively polar composition, they often lack sufficient hydrophobicity by themselves to incorporate into the membrane efficiently via the translocon.
-Other elements of the sequence context, such as other transmembrane helices or flexible loop regions, allow the marginally hydrophobic transmembrane regions to integrate into the membrane environment.
+In some cases other elements of the sequence context, such as other transmembrane helices or flexible loop regions, allow the marginally hydrophobic transmembrane regions to integrate into the membrane environment.
 Here we analyse large numbers of multipass transmembrane protein sequences stratified by protein families and molecular functions to show that there are conserved stark differences between sequentially adjacent transmembrane helices in terms of hydrophobicity and TMSOC complexity.
 Not all classes of transmembrane protein have these highly polar\--hydrophobic pairs.
 In the instances of GPCRs and ion channels, there is evidence in the literature to support cooperative insertion between these highly polar\--hydrophobic transmembrane helix pairs highlighted in our results.
@@ -30,10 +30,10 @@ This translocon assembly then threads the chain through the membrane and release
 \end{figure}
 
 The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
-It has long been understood that this method is essentially the~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to an~\gls{sr} in association with the membrane insertion machinery on the~\gls{er} membrane~\cite{Pool2005, Hessa2005}.
+It has long been understood that this method is essentially the~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, which targets the peptide and ribosome to an~\gls{sr} in association with the membrane insertion machinery on the~\gls{er} membrane~\cite{Pool2005, Hessa2005}.
 
 Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and the membrane bound translocon associated \gls{sr} ~\cite{Shan2005}.
-the \gls{srp}\--ribosome\--nascent peptide complex associates with the translocon\--\gls{sr} complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
+The \gls{srp}\--ribosome\--nascent peptide complex associates with the translocon\--\gls{sr} complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
 Mutant studies of \gls{srp} revealed key discrete conformational stages~\cite{Shan2005}.
 These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event \cite{Saraogi2011}.
 
@@ -42,12 +42,12 @@ These are the specific recognition of signal sequences on cargo proteins, the ta
 The prevailing view of membrane insertion by the translocon is that the \gls{tmh}s partition in the membrane one at a time as the translocon lateral gate opens, exposing the \gls{tmh} to the membrane (Figure \ref{fig:sequential-insertion})~\cite{Cymer2015}.
 
 \subsection{The ribosome-translocon complex in the biogenesis of membrane proteins}
-Ribosomes translate mRNA sequences into amino acid chains and are present in all living cells, and indeed the ribosomal complexes presence and activity is considered an important distinction in biology between ribosome\--encoding organisms and capsid encoding organisms \cite{Raoult2008}.
+Ribosomes translate mRNA sequences into amino acid chains and are present in all living cells.
+Indeed the ribosomal complexes presence and activity is considered an important distinction in biology between ribosome\--encoding organisms and capsid encoding organisms \cite{Raoult2008}.
 They are a highly conserved \gls{rna}\--protein complex with a multitude of accessory proteins and targetting factors.
 
-During translation of a \gls{tmp} protein, the \gls{srp} binds to the ribosome after recognising the nascent protein as a \gls{tmp}.
-
-This complex then binds to the \gls{sr} in association with the membrane\--bound translocon.
+During translation of a \gls{tmp} protein, the \gls{srp} binds to the ribosome after recognising the nascent protein as a \gls{tmp} \cite{Walter1981}.
+This complex then binds to the \gls{sr} in association with the membrane\--bound translocon \cite{Song2000}.
 The nascent peptide is then fed into the translocon as it is being translated; hence ``co-translational insertion''.
 The journey of the \gls{tmh} through this machinery has been studied using both  cross\--linking experiments and the relatively new technique of \gls{ap}s \cite{Cymer2015}.
 
@@ -74,8 +74,8 @@ Several ``strengths'' of \gls{ap} have been identified.
 For example, SecM from \textit{E. coli} is 17 residues long and relatively weak, whereas a mutated SecM from \textit{Mannheimia succiniciproducens} (Ms-Sup1) is much stronger and 8 residues long ending in a proline which will halt translation \cite{Ismail2012}.
 There are several other SecM proteins of other strengths from various bacterial species \cite{Yap2009}.
 Therefore \gls{ap}s are a technique that can be used to measure precise forces acting on a specific part of the nascent chain during co-translational membrane protein integration allowing the study of \gls{tmp} kinetics during insertion and folding.
-Indeed the force profile of a single residue can now be obtained \textit{in vivo} \cite{Ismail2012}.
-In an idealised \gls{tmh} segment composed of alanine and leucine being inserted into \textit{E. coli} membrane through SecM \gls{ap} with SDS-PAGE, hydrophobicity is more able to overcome the arrest peptide when it is near the N\--terminal (of an N\--terminal-inside \gls{tmh}) \cite{Ismail2012}.
+The force profile of a single residue can now be obtained \textit{in vivo} \cite{Ismail2012}.
+In an idealised \gls{tmh} segment composed of alanine and leucine being inserted into \textit{E. coli} membrane through SecM \gls{ap} with SDS-PAGE, hydrophobicity is more able to overcome the arrest peptide when it is near the N\--terminal of a \gls{tmh} with N\--terminal-inside topology \cite{Ismail2012}.
 This could be either the \gls{tmh} finally coming into contact with the cytoplasmic face of the lipid bilayer, or an interaction between the N\--terminal and the tip of the lateral gate as previously shown in Sec61; part of a pre-integration \gls{tmh} interrogation \cite{MacKinnon2014}.
 
 The ribosome passes the nascent chain to the Sec translocon machinery.
@@ -88,7 +88,7 @@ During translocation the plug moves out of the pore \cite{Li2016}, the channel i
 
 \subsection{Cooperative transmembrane helix insertion by the translocon-ribosome complex}
 
-Early evidence of secondary structure folding of the $K_{v}$ ion channel showed that the S6 \gls{tmh} (referred to later in this study as TMH6) is indeed compacted in the ribosomal tunnel by using pegylation and calmodulation of the tagged cysteine-scanned S6 transmembrane segment \cite{Lu2005}.
+Early evidence of secondary structure folding of the $K_{v}$ ion channel showed that the S6 \gls{tmh} (referred to later in this study as TMH6) is indeed compacted in the ribosomal tunnel by using pegylation and calmodulation of the tagged cysteine-scanned S6 \gls{tms} \cite{Lu2005}.
 Furthermore, accessibility assays and an improved intramolecular  cross\--linking assay showed that the helical transmembrane S3\--S4 hairpin (the “paddle”) of a voltage-gated potassium ($K_{v}$) forms in the ribosome tunnel \cite{Tu2014}.
 Ribosomal folding of the \gls{tmh}s in $K_{v}$1.3, a potassium channel, is maintained in the translocon \cite{Tu2010a}.
 Therefore, some of the final structural folding of the voltage sensor domain occur within the ribosomal exit tunnel.
@@ -99,7 +99,7 @@ Two ribosome mutants of deleted uL23 and a uL24 variant that does not contain th
 These mutants resulted in reduced space for folding in the ribosomal exit tunnel at separate points.
 ADR1a, a 29\-- residue zinc finger motif, was found to fold deeper in uL23 mutant than the wildtype and the uL24.
 Two domain folds of 109 and 89 residues in length folded deeper in the uL24 mutant than in the wild\--type and the uL23 mutant.
-This shows that  cotranslational folding can occur in the ribosomal exit tunnel once sufficient space is available \cite{Kudva2018}.
+This shows that cotranslational folding can occur in the ribosomal exit tunnel once sufficient space is available \cite{Kudva2018}.
 
 The ribosomal tunnel also speeds up elongation of neutral and negatively-charged peptides.
 This is attributed to the sporadic negative patches within the ribosomal exit tunnel \cite{Lu2008}.
@@ -107,7 +107,7 @@ This is attributed to the sporadic negative patches within the ribosomal exit tu
 The ribosome clearly has the potential to pre\--fold secondary structures and some motifs before translocon insertion into the membrane.
 
 Multiple \gls{tmh}s in a nascent protein can be associated with the eukaryotic translocon simultaneously.
-It was shown that \gls{tmh}s can stay in association with the translocon in order to mediate integration of downstream \gls{tmh}s demonstrated by  cross\--linking analysis \cite{Sadlish2005, Cross2009}.
+It was shown that \gls{tmh}s can stay in association with the translocon in order to mediate integration of downstream \gls{tmh}s demonstrated by  cross\--linking analysis in Aquaporin\--4 \cite{Sadlish2005} and a ligand\--gated ion channel, the P2X2 receptor channel \cite{Cross2009}.
 Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
 This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
 
@@ -115,21 +115,20 @@ Sixteen marginally hydrophobic \gls{tmh}s were screened and revealed that indepe
 The study showed that in the presence of the neighbouring loops and \gls{tmh}s, insertion often became sufficient with the exception of two of the marginally hydrophobic \gls{tmh}s.
 The orientational preference of neighbouring \gls{tmh}s was shown to increase insertion efficiency into the \gls{er} of a marginally hydrophobic \gls{tmh} \cite{Ojemalm2012}.
 A glycosylation study of three relatively polar \gls{tmh}s revealed that proteins have even evolved to exhibit stronger ``positive\--inside'' tendencies when following another \gls{tmh} \cite{Virkki2014}.
-Subsequent \gls{tmh}s with a strong topological preference (increased arginine presence) increase the insertion potential of relatively polar \gls{tmh}s, however, no specific interaction between the \gls{tmh}s was responsible.
+Subsequent \gls{tmh}s with a strong topological preference (increased arginine presence) increase the insertion potential of marginally hydrophobic \gls{tmh}s, however, no specific interaction between the \gls{tmh}s was responsible.
 The nascent polypeptide in the cavity between the ribosome and the translocon can
-alter the hydrophobic threshold of the translocon is dynamic and influenced by downstream flexible sequences \cite{Junne2017}.
-Sequence context is clearly an important factor of the efficient insertion of marginally hydrophobic \gls{tmh}s; these \gls{tmh}s rely on other components of their protein in order to incorporate into the membrane.
+alter the hydrophobic threshold of the translocon which therefore is dynamic and influenced by downstream flexible sequences \cite{Junne2017}.
+Sequence context is clearly an important factor for the efficient insertion of marginally hydrophobic \gls{tmh}s.
+These \gls{tmh}s rely on other components of their protein in order to incorporate into the membrane.
 
 \section{Methods}
 \subsection{Datasets}
 \subsubsection{Membrane protein families}
-This is not an exhaustive search among \gls{tmp}s for all examples of starkly polar \gls{tmh}s conserved among the family.
-Instead, we show that there is a precedent for several, but not all, protein families to contain polar helices and that these polar \gls{tmh}s are sequentially next to typically hydrophobic \gls{tmh}s.
-Analysis can only be done if the number of \gls{tmh}s is conserved across the family since different mechanisms are utilised to transmit a signal or transport a molecule across the membrane.
 
 Datasets were attained by querying the UniProt database for controlled vocabulary keywords (Table \ref{table:datasetsizes}) \cite{TheUniProtConsortium2014}.
 After filtering out redundant proteins using UniRef50, the datasets were stratified according to the total number of \gls{tmh}s per protein.
 Only families with a total N \textgreater 20 were included in the analysis, for example, there are ion channels with 12 \gls{tmh}s, but only 16 examples fitted the criteria and were omitted from the study.
+Analysis can only be done if the number of \gls{tmh}s is conserved across the family.
 
 
 
@@ -208,15 +207,15 @@ The TMSOC  z\--score quantifies this relationship and is calculated by equation 
 z({x}_{\Phi},{x}_{c})={(-1)}^{s}\left[\frac{{({x}_{\Phi}-{\mu}_{\Phi})}^{2}}{{\sigma}_{\phi}^{2}}+\frac{{({x}_{c}-{\mu}_{c})}^{2}}{{\sigma}_{c}^{2}}\right]
 \end{equation}
 
-$x_c$ and $x_\Phi$ are moving window averages of c, the sequence entropy~\cite{Wootton1996}. $\Phi$ is the White and Wimley hydrophobicity~\cite{White1999} for a given segment and $\mu$ and $\sigma$ are the mean and standard deviation of the sequence entropy and hydrophobicity of the functional~\gls{tmh} sets.
+$x_c$ and $x_\Phi$ are moving window averages of c, the sequence entropy determined by SEG \cite{WOOTTON1994269, Wootton1996}. $\Phi$ is the White and Wimley hydrophobicity~\cite{White1999} for a given segment and $\mu$ and $\sigma$ are the mean and standard deviation of the sequence entropy and hydrophobicity of the functional~\gls{tmh} sets.
 
-Broadly speaking, the information theory entropy of a linguistic string can be defined as in equation~\ref{simpleentropy}.
+Broadly speaking, the information theory entropy of a linguistic string can be defined as in equation~\ref{simpleentropy}, which we use to calculate the sequence information entropy of \gls{tmh}s.
 
 \begin{equation} \label{simpleentropy}
 	H(S)=-{\sum_{i=1}^n {p_i\log_s(p_i)}}
 \end{equation}
 
-Where H is the entropy of a sequence (S), and $p_i$ is the probability of a character $i$ through each position (n) in S. This allows us to quantify the average relative information density held within a string of information~\cite{Shannon1948}.
+Where $H$ is the entropy of a sequence $(S)$, and $p_i$ is the probability of a character $i$ through each position ($n$) in $S$. This allows us to quantify the average relative information density held within a string of information~\cite{Shannon1948}.
 
 \subsection{Statistics}
 
@@ -224,7 +223,7 @@ We used the Welch's t\--test to scrutinise the means of the datasets without ass
 To examine any differences in the skew of the datasets, the Kruskal Wallis, and the Kolmogorov Smirnov tests were used.
 All these tests were performed using the Python scipy package \cite{Oliphant2007}.
 
-\subsection{Availability}
+\subsection{Availability of materials}
 
 The scripts and datasets associated with this study can be accessed at \url{https://github.com/JamesABaker/multipass_tmh_analysis}.
 
@@ -232,11 +231,11 @@ The scripts and datasets associated with this study can be accessed at \url{http
 \section{Results and discussion}
 
 \subsection{Large contrasts in transmembrane helix hydrophobicity occur in channels and receptors}
-Large differences in sequenctially adjacent \gls{tmh}s could indicate cooperative insertion mechanisms of marginally hydrophobic \gls{tmh}s.
+Large differences in sequentially adjacent \gls{tmh}s could indicate cooperative insertion between a marginally hydrophobic \gls{tmh} and a more typically hydrophobic \gls{tmh}.
 In order to identify which type of \gls{tmp} may contain cooperative \gls{tmh}s, the hydrophobicities for \gls{tmh}s from 30045 records in a non-redundant version of SwissProt were calculated according to the Kyte \& Dolittle hydropathy scale \cite{Kyte1982}.
 The absolute difference between each sequentially adjacent \gls{tmh} was calculated.
-The full list, along with the 0.1\% \gls{tmh} pair were submitted to PANTHER \cite{Mi2017}.
-We found that transporters were by far the most abundant in this sub\--list relative to the global TMP list, however, it should be considered that ``transporters'' in this sense also includes both ion transporters and ion channels (Figure \ref{fig:good-bad-ontology}).
+The full list, alongside a list of the 0.1\% highest hydrophobic discrepancy \gls{tmh} pairs, were submitted to PANTHER \cite{Mi2017}.
+We found that transporters were by far the most abundant in the 0.1\% sub\--list relative to the global TMP list, however, it should be considered that ``transporters'' in this sense also includes both ion transporters and ion channels (Figure \ref{fig:good-bad-ontology}).
 Among the other prevalent functions are receptors, binding proteins, and signal transducers.
 All these lists were predominantly made up of \gls{gpcr}s.
 
@@ -247,7 +246,7 @@ All these lists were predominantly made up of \gls{gpcr}s.
 		\captionof{figure}[Pie charts of a non-redundant list of transmembrane proteins compared to a list of transmembrane proteins containing the most hydrophobically different transmembrane helix pairs.]{\textbf{Pie charts of a non-redundant list of transmembrane proteins compared to a list of transmembrane proteins containing the most hydrophobically different transmembrane helix pairs.}
     The output of PANTHER Gene ontology server of A) a non-redundant list of all TMPs in SwissProt and
     B) a list of the TMPs with the highest (0.1\%) hydrophobic discrepancy between adjacent TMHs.
-    Note that the proportions of binding TMPs stay roughly the same, receptors and signal transducers reduce slightly, catalytic proteins are reduced by two thirds and transporter more than doubles in proportion.
+    Note that the proportions of binding TMPs stay roughly the same, receptors and signal transducers reduce slightly, catalytic proteins are reduced by two thirds and transporter activity proteins more than double in proportion.
     }
 
 \label{fig:good-bad-ontology}
@@ -290,13 +289,13 @@ PDB codes 1u19 (rhodopsin) \cite{Okada2004}, 2z73 (rhodopsin) \cite{Murakami2008
 Even in a relatively small dataset of functionally varied \gls{gpcr}s, we can see structural conservation of the \gls{tmh} arrangement (Figure \ref{fig:GPCR-structures}A Figure \ref{fig:GPCR-structures}C).
 Hydrophobic patterns are hard to identify structurally beyond the clear membrane boundary where we would expect to see hydrophobic residues in the \gls{tmh} (Figure \ref{fig:GPCR-structures}B).
 TMSOC \cite{Wong2011, Wong2012} is an algorithm that takes into account the White and Wimley hydrophobicity \cite{White1999} and the information entropy of the TMH sequence.
-Note that the scale is the inverse of the Kyte \& Doolittle scale, i.e a more negative score indicates a higher hydrophobic contribution in TMSOC z\--score, and a more positive value indicates higher hydrophobicity.
+Note that the scale is the inverse of the Kyte \& Doolittle scale, i.e a more negative TMSOC z-score indicates a higher hydrophobic contribution to the TMSOC z\--score.
 The resulting z\--score has been shown to be able to scrutinise between \gls{tmh}s that serve as anchors and those that have a function beyond \gls{tmp} anchoring.
 The lower the z\--score (low sequence information entropy and high hydrophobicity), the more likelihood of the \gls{tmh} being solely a membrane anchor.
 When considering the functional/anchoring potential of these \gls{gpcr} \gls{tmh}s  using TMSOC, we see trends among the structures with an average of 1.96 for TMH1, 2.30 for TMH2, 2.43 for TMH3, 2.34 for TMH4, 2.05 for TMH5, 2.24 for TMH 6 and 2.83 for TMH7 (Figure \ref{fig:GPCR-structures}D).
 TMH3 and TMH7 are therefore the most likely to contain function beyond anchorage, whilst the low z\--scores of TMH1 and TMH5 indicate they are more optimal anchors \cite{Baker2017}.
 
-When we consider much larger sequence datasets containing 1016 \gls{tmh}s at each \gls{tmh} number from non-redundant \gls{gpcr}s obtained from UniProt, the trend remains the same: that TMH3 (mean z\--score of 2.52) and TMH7 (mean z\--score of 2.55) have the highest z\--score, whilst TMH1 (mean z\--score of 2.09) and TMH5 (mean z\--score of 2.20) have the lowest (Figure \ref{fig:GPCR-structures}E).
+When we consider much larger sequence datasets containing 1016 \gls{tmh}s at each \gls{tmh} number from non-redundant \gls{gpcr}s obtained from UniProt, the trend remains the same; that TMH3 (mean z\--score of 2.52) and TMH7 (mean z\--score of 2.55) have the highest z\--score, whilst TMH1 (mean z\--score of 2.09) and TMH5 (mean z\--score of 2.20) have the lowest (Figure \ref{fig:GPCR-structures}E).
 To investigate the statistical differences between the z\--score of the \gls{tmh}s, we applied the Kruskal Wallis and 2-sample Kolmogorov Smirnov tests from each \gls{tmh} number to each other \gls{tmh} number.
 TMH5 and TMH7 are statistically significantly distinct in terms of TMSOC z\--score (Welch's t-test P\--value = 1.57E\--146, Kruskal Wallis P\--value = 1.66E\--132, Kolmogorov Smirnov P\--value = 1.38E\--105) as are TMH6 and TMH7 (P\--value = 1.48E\--51, Kruskal Wallis P\--value = 4.96E\--52, Kolmogorov Smirnov P\--value = 1.74E\--37).
 This is also mirrored in the relationship between the preceding \gls{tmh}s of TMH3.
@@ -320,9 +319,9 @@ Even though there is a discrepancy between the scales, the significant change in
 \label{fig:gpcr-hydrophobicity-verification}
 \end{figure}
 
-In order to determine if this is conserved through the \gls{gpcr} subfamilies, a variety of \gls{gpcr}s with different functions were examined in terms of Kyte \& Doolittle hydrophobicity.
-When considering different \gls{gpcr} subfamilies, we see a consistent difference between hydrophobicities between TMH6 and TMH7 besides metabolic glutamate \gls{gpcr}s (Welch's t\--test P\--value = 0.90) and Frizzled-smooth \gls{gpcr}s (Welch's t\--test P\--value = 0.07) in which there is only a little discrepancy (Figure \ref{fig:KD-GPCR}).
-For opsins, Welch's t\--test P\--value is 5.62E-15.
+In order to determine if this is conserved through the \gls{gpcr} subfamilies, a variety of \gls{gpcr}s with different functions were examined in terms of Kyte \& Doolittle hydrophobicity \cite{Kyte1982}.
+When considering different \gls{gpcr} subfamilies, we see a consistent difference between the \gls{tmh} hydrophobicities of TMH6 and TMH7 besides metabolic glutamate \gls{gpcr}s (Welch's t\--test P\--value = 0.90) and Frizzled-smooth \gls{gpcr}s (Welch's t\--test P\--value = 0.07)~(Figure \ref{fig:KD-GPCR}).
+For opsins, Welch's t\--test P\--value is 5.62E-15 between TMH6 and TMH7.
 After restricting the dataset to only those records with 7 \gls{tmh}s, fungal mating \gls{gpcr}s were reduced to a set of 9 proteins, however as a trend, they appear to be very typical \gls{gpcr}s in terms of \gls{tmh} hydrophobicity.
 They follow a very similar pattern to the much more popular olfactory \gls{gpcr}s (N=263) for which the TMH6 to TMH7 Welch's t\--test P\--value was 4.73E-35.
 For taste receptors, there are much bigger step changes between sequentially adjacent \gls{tmh}s than between TMH6 to TMH7.
@@ -348,17 +347,18 @@ Opsins are a group of light\--sensitive \gls{gpcr}s that exhibit the TMH6\--TMH7
 It was shown by cross\--linking studies that opsin \gls{tmh}s 5-7 are retained in the \gls{er} translocon and only partition into the membrane once biosynthesis is complete \cite{Ismail2008}.
 The timing of this partitioning is controlled by the hydrophobicity of the \gls{tmh}, not protein length or the relative position of the \gls{tmh} within the protein.
 Although artificially extending the C-terminal did not result in the release of the \gls{tmh}s, by replacing native TMH7 with a more hydrophobic \gls{tmh}, the speed of insertion was decreased.
-\gls{tmh}s 1-4 are inserted independently, and the 5-7 \gls{tmh}s partition into the membrane at the same time.
+\gls{tmh}s 1-4 are inserted independently, and the 5-7 \gls{tmh}s partition into the membrane at the same time \cite{Ismail2008}.
 
-Since lowering the difference in hydrophobicity between TMH6 and TMH7 impedes efficient insertion of the \gls{gpcr} \cite{Ismail2008}, one would expect the terminal \gls{tmh} to be more hydrophobic rather than relatively polar \cite{Virkki2014}.
-This hydrophobic difference is highly conserved throughout \gls{gpcr}s generally (Figure \ref{fig:GPCR-structures}F), and especially in many of the subfamilies(Figure \ref{fig:KD-GPCR}A, C, D, F).
+Lowering the difference in hydrophobicity between TMH6 and TMH7 impedes efficient insertion of the \gls{gpcr} \cite{Ismail2008}, however, one would expect the terminal \gls{tmh} to be more hydrophobic rather than relatively polar \cite{Virkki2014}.
+This hydrophobic difference is highly conserved throughout \gls{gpcr}s generally (Figure \ref{fig:GPCR-structures}F), and especially in many of the subfamilies (Figure \ref{fig:KD-GPCR}A, C, D, F).
 We believe that the hydrophobic difference of TMH6 and TMH7 is highly important to the biogenesis of \gls{gpcr}s.
-This could be evidence for widespread biologically employed \gls{tmh} cooperation during translocation of a typically hydrophobic \gls{tmh} remaining in association with the translocon until the relatively polar \gls{tmh} is processed by the insertion machinery.
+This could be evidence for widespread biologically employed \gls{tmh} cooperation during translocation.
+A typically hydrophobic \gls{tmh} remains in association with the translocon until the relatively polar \gls{tmh} is processed by the insertion machinery.
 
 
 \subsection{6TMH ion channels contain polar-hydrophobic transmembrane helix pairs/groups indicative of conserved cooperative insertion}
 
-Another group of proteins that featured heavily on the list of top \gls{tmh} pairs with a high hydrophobic discrepancy was ion channels (Figure \ref{fig:good-bad-ontology}B).
+Another group of proteins that featured heavily on the list of top \gls{tmh} pairs with a high hydrophobic discrepancy were ion channels (Figure \ref{fig:good-bad-ontology}B).
 Ion channels are a much more structurally varied class of \gls{tmp} than \gls{gpcr}s, varying greatly in their number of \gls{tmh}s, so a summary structural alignment equivalent to Figure \ref{fig:GPCR-structures}A, B, and C was not possible.
 
 Voltage\--gated ion channels are another example of cooperative \gls{tmh} insertion.
@@ -367,8 +367,8 @@ This is especially notable in the case of KAT1, that is a plant K$_v$ channel th
 In the case of KAT1, N\--glycosylation of various mutant fusion KAT1 constructs revealed that there is no choice of sequential insertion since TMH3 and TMH4 have no insertion potential and no topogenic functions themselves \cite{Sato2002, Sato2003}.
 In TMH4 this is due to the charged residues making it relatively polar.
 However, previous experimentation in $K_{v}$1.3 had found that while TMH4 did not initiate insertion, it did have insertion potential and that when constructs contained multiple \gls{tmh}s, membrane insertion efficiency increased \cite{Tu2000}.
-Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different means was needed than classic sequential insertion, and even that TMH3 and TMH4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
-They achieve this in part because the previous \gls{tmh}s,  TMH1 and TMH2, form a firm ``base'' within the membrane environment.
+Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different mechanism was needed than classic sequential insertion, and even that TMH3 and TMH4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
+They achieve this in part because the previous \gls{tmh}s,  TMH1 and TMH2, form a firm ``base'' within the membrane environment \cite{Sato2003}.
 
 \begin{figure}[!ht]
 \centering
@@ -402,7 +402,7 @@ When using the Kyte \& Doolittle hydrophobic scale, the hydrophobic step change 
 This is the most significant step change besides TMH4 to TMH5 (mean hydrophobicity of 1.77, Welch's t\--test P\--value = 1.88E\--31).
 TMH5, the pore\--forming region, and TMH6 can be integrated independently into the membrane, but TMH3 and TMH4, at least in the case of KAT1, cannot \cite{Sato2002}.
 However, there is strong evidence that TMH3 and TMH4 cooperate with one another during membrane integration and are inserted at the same time \cite{Sato2002, Sato2003, Zhang2007, Cymer2015}.
-This leads us to be inclined to believe that the hydrophobic gap here that indicates a conserved cooperative role between \gls{tmh}s is that between TMH3 and TMH4 rather than TMH4 and TMH5.
+With this in mind, the hydrophobic gap here indicates a conserved cooperative role between TMH3 and TMH4 rather than TMH4 and TMH5.
 
 
 
@@ -411,11 +411,11 @@ However, the pattern is more obscure in ligand\--gated ion channels (Welch's t\-
 The difference does appear to match the general pattern, however, albeit as a trend, in the 33 records; there is a decrease in the mean hydrophobicity from 1.31 to 1.03 (Figure \ref{fig:KD-ion-channels}D).
 
  The TMH3 TMH4 hydrophobic step also appears to be independent of the ion being transported.
- For calcium ion channels the drop from TMH3 (mean hydrophobicity 1.52) to TMH3 (mean hydrophobicity 1.21) is significant (Welch's t\--test P\--value = 3.57E-3) given the relatively low sample size (38 protein records) (Figure \ref{fig:KD-ion-channels}E).
+ For calcium ion channels the drop from TMH3 (mean hydrophobicity 1.52) to TMH4 (mean hydrophobicity 1.21) is significant (Welch's t\--test P\--value = 3.57E-3) given the relatively low sample size (38 protein records) (Figure \ref{fig:KD-ion-channels}E).
 In potassium channels, the difference is even greater between TMH3 (mean hydrophobicity of 1.37) and TMH4 (mean hydrophobicity of 0.61) (Welch's t\--test P\--value = 2.52E-19) in potassium ion channels (Figure \ref{fig:KD-ion-channels}F).
 
 The observed difference between TMH3 and TMH4 is somewhat independent of the scale chosen (Figure \ref{fig:ion-channel-hydrophobicity-verification}), however, the Kyte \& Doolittle scale is the most sensitive to the hydrophobic differences between TMH3 and TMH4.
-Statistical significance was found in the difference between TMH3 and TMH4 in the Eisenberg scale (Welch's t\--test P\--value = 4.74E-23), the White and Wimley scale (Welch's t\--test P\--value = 1.26E-3).
+Statistical significance was found in the difference between TMH3 and TMH4 in the Eisenberg scale (Welch's t\--test P\--value = 4.74E-23) and the White and Wimley scale (Welch's t\--test P\--value = 1.26E-3).
 The Hessa/von Heijne biological scale was particularly insensitive to the mean difference (Welch's t\--test P\--value = 7.56E-2), but can scrutinise some difference in the skews of the data (Kolmogorov Smirnov test  P\--value = 1.56E-4, Kruskal Wallis P\--value = 4.00E-2) indicating that whilst biophysically the \gls{tmh}s are distinct, the translocon may not readily scrutinise the hydrophobicity between the two.
 All the scales however corroborate the large hydrophobic difference between TMH4 and TMH5 (Welch's t\--test P\--values for Hessa = 1.23E-35, White and Wimley = 4.82E-23, Eisenberg = 5.72E-41)
 
@@ -431,12 +431,12 @@ All the scales however corroborate the large hydrophobic difference between TMH4
 \label{fig:ion-channel-hydrophobicity-verification}
 \end{figure}
 
-24TMH class is essentially a modular variant of the 6TMH class, and has even more extreme discrepancies between the equivalent 4 TMHs (Figure \ref{fig:KD-ion-channels}B).
+The 24TMH class is essentially a modular variant of the 6TMH class and has even more extreme discrepancies between the equivalent 4 TMHs (Figure \ref{fig:KD-ion-channels}B).
 In the first cluster, TMH3 (mean Kyte \& Doolittle hydrophobicity = 0.96) to TMH4 (mean hydrophobicity = 0.47) is different (Welch's t\--test P\--value = 5.16E-6), but even more so is the step up from TMH4 to TMH5 (hydrophobicity = 2.26, Welch's t\--test P\--value = 5.16E-32).
 The preceding step is weaker, and the proceeding step is greater throughout the 6TMH ``modules''.
 A similar step change is found between TMH9 and TMH10 (P\--value = 3.02E-13) and TMH10 to TMH11 (P\--value = 5.51E-44), TMH15 to TMH16 (P\--value = 1.79E-23), TMH16 to TMH17 (P\--value = 1.67E-27), TMH21 to TMH22 (P\--value = 1.64E-9), and TMH22 to TMH23 (P\--value = 3.42E-31).
 
-Oddly, as a trend, the TMSOC  z\--score was not sensitive to detecting function in the extremely hydrophobic TMH4 (Figure \ref{fig:Ion-channel-information-entropy}).
+As a trend, the TMSOC  z\--score was not sensitive to detecting function in the extremely hydrophobic TMH4 (Figure \ref{fig:Ion-channel-information-entropy}).
 This is due to the other component of the  z\--score, the sequence information entropy \cite{Wong2011, Wong2012}.
 The relative probability of a polar/charged residue is so high in TMH4 that it apparently has the same expectancy as the hydrophobic residues, and the ``simple'' entropy mutes somewhat the effect of the extreme hydrophobicity.
 This is compounded by the fact that the White and Wimley scale (used to generate the  z\--score) is already less sensitive to the relative polarity difference between TMH3 and TMH4 than the Kyte \& Doolittle scale (Figure \ref{fig:KD-ion-channels}A, Figure \ref{fig:ion-channel-hydrophobicity-verification}A).
@@ -512,7 +512,6 @@ We see this pattern across several \gls{gpcr} sub\--families and the \gls{gpcr} 
 Furthermore, we found that the charged TMH4 of 6TMH ion channels has a typically hydrophobic TMH3 preceding it and a more hydrophobic TMH5 following it.
 Indeed there is evidence that TMH3 and TMH4 cannot incorporate alone \cite{Sato2003}, that TMH3 and TMH4 can insert as a pair from the translocon simultaneously \cite{Zhang2007, Cymer2015}.
 
-With the emergence of advanced cross\--linking experiments and \gls{ap}s that can probe energetics and \gls{tmh}\--\gls{tmh} interactions dynamically during ribosomal translation and membrane insertion, it could be possible to expore \gls{tmh}\--\gls{tmh} relationships in more detail.
-We suggest that \gls{tmh}s with highly contrasting hydrophobicity and TMSOC z\--score could yield interesting examples of cooperative insertion during translocation.
-For example, here we find discrepancies in the TMH6 and TMH11 to their adjacent \gls{tmh}s of sugar transporters as well as TMH2 and TMH3 in ion channels, specifically in chloride channels.
-Understanding the biogenesis of proteins is essential to solving misfolding in disease phenotypes and for developing viable \gls{tmp} chassis in synthetic biology.
+Advanced cross\--linking experiments, single molecule cryo\gls{em}, and \gls{ap}s can probe energetics and \gls{tmh}\--\gls{tmh} interactions and associations dynamically during ribosomal translation and membrane insertion.
+These methods could explore the \gls{tmh}\--\gls{tmh} relationships such as cooperation during insertion in more detail with temporal contextualisation.
+Understanding the biogenesis of \gls{tmp}s is essential to solving misfolding in disease phenotypes, and for developing viable \gls{tmp} chassis in synthetic biology \cite{Kang2018, Lu2018}.
